Rather than pad the .navbar-collapse pad the NAV is contains, to prevent strange collapsing behaviour. Overrides the previous 4 commits.

--- a/css/style.css
+++ b/css/style.css
@@ -7353,7 +7353,7 @@ table .checkbox input[type="checkbox"] {
   z-index: 1;
   overflow-y: unset;
 }
-.navbar-default .navbar-collapse .navigation {
+.navbar-default .navbar-collapse nav {
   padding: 60px 0 20px;
 }
 .navbar-default .navbar-collapse .navbar-nav {
