--- a/less/header.less
+++ b/less/header.less
@@ -35,7 +35,7 @@
     z-index: 1;
     overflow-y: unset;
 
-    .navigation {
+    nav {
       padding: (3 * @line-height-computed) 0 @line-height-computed;
     }
 
